--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -340,7 +340,7 @@ The monks accepted his instructions and listened.
 104\. “If a diligent monk recovers a little from an illness, he thinks, ‘I’ve begun to recover from that illness. It might get worse, which would interrupt my practice. I ought to make effort by sitting in meditation and walking back and forth now.’ He will attain what he has yet to attain, obtain what he has yet to obtain, and realize what he has yet to realize. Thereupon, that monk then immediately makes effort by sitting in meditation and walking. [This is the eighth effort.]
 {:#p104}
 
-105\. “What are eight things that are difficult to understand? The eight cases of having no opportunity to cultivate the religious practice. What are the eight? [1] The Tathāgata, the Arhat, arises in the world and teaches the sublime teaching that’s quiescent, unconditioned, and leads to the path of awakening. A person who’s born in Hell has no opportunity there to cultivate the religious practice.
+105\. “What are eight things that are difficult to understand? The eight cases of having no opportunity to cultivate the religious practice. What are the eight? [1] The Tathāgata, the Arhat, arises in the world and teaches the sublime teaching that’s quiescent, unconditioned, and leads to the path of awakening. A person who’s born in hell has no opportunity there to cultivate the religious practice.
 {:#p105}
 
 106\. “[2] The Tathāgata, the Arhat, arises in the world and teaches the sublime teaching that’s quiescent, unconditioned, and leads to the path of awakening. There are sentient beings born among animals … [3] among hungry ghosts … [4] among long-lived gods … [5] in border lands where they are unaware of it. The Buddha’s teaching doesn’t exist in such places, so there’s no opportunity to cultivate the religious practice.
