--- a/01_agama/dirgha/DA_20.md
+++ b/01_agama/dirgha/DA_20.md
@@ -85,7 +85,7 @@ The student replied, “My clan is Svararāja.”[\[9\]](#n9){:#ref9}
 20\. The Buddha told the student, “That clan of yours is from the servant class of the Śākyas.”
 {:#p20}
 
-His 500 student disciples raised an uproar, saying to the Buddha, “Don’t say such things as ‘This student is from the servant class of the Śākyas’! Why is that? This great student is a legitimate son of his clan. He’s handsome looking, eloquent, accommodating, and broadly learned. It’s enough to converse with Gautama.”
+His 500 student disciples raised an uproar, saying to the Buddha, “Don’t say such things as ‘This student is from the servant class of the Śākyas’! Why is that? This great student is a legitimate son of his clan. He’s handsome-looking, eloquent, accommodating, and broadly learned. It’s enough to converse with Gautama.”
 
 21\. The Buddha then told the 500 students, “If your teacher is not entirely as you say, I’ll set aside your teacher and discuss the matter with you. If your teacher is superior in the ways you say, then you ought to be quiet, and I’ll discuss it with your teacher.”
 {:#p21}
@@ -592,7 +592,7 @@ He answered, “I did in fact exchange words with Gautama.”
 
 The student told his teacher about the words he exchanged with the Buddha.
 
-His teacher said, “I had an intelligent disciple to send as my messenger, but we’ll soon end up in Hell. Why is that? You spoke as a superior and criticized Gautama. When my messenger is displeasing, it comes back to me. You and the other intelligent disciples were sent with this errand, but I’ll soon end up in Hell [on your account].”
+His teacher said, “I had an intelligent disciple to send as my messenger, but we’ll soon end up in hell. Why is that? You spoke as a superior and criticized Gautama. When my messenger is displeasing, it comes back to me. You and the other intelligent disciples were sent with this errand, but I’ll soon end up in hell [on your account].”
 
 161\. Under the influence of the bond of resentment, the teacher kicked his student, making him fall from the chariot they were riding. After he fell from the chariot, the student developed vitiligo.
 {:#p161}
