--- a/01_agama/dirgha/DA_22.md
+++ b/01_agama/dirgha/DA_22.md
@@ -55,7 +55,7 @@ next: DA_23.html
 15\. “Moreover, great priest, you’ve mastered the three Vedas and can discern all the various scriptures. You’re learned about all the subtleties of the world’s scriptures. You’re also skilled at [recognizing] the great man’s signs, divining fortune and misfortune, and [performing] sacrifices and rituals. You have achieved such status, so he should come here to visit you; you shouldn’t go there to visit him.
 {:#p15}
 
-16\. “Moreover, great priest, you’re handsome looking, having attained the appearance of Brahma. You have achieved such status, so he should come here to visit you; you shouldn’t go there to visit him.
+16\. “Moreover, great priest, you’re handsome-looking, having attained the appearance of Brahma. You have achieved such status, so he should come here to visit you; you shouldn’t go there to visit him.
 {:#p16}
 
 17\. “Moreover, great priest, your precepts and virtue are surpassing, and your wisdom is accomplished. You have achieved such status, so he should come here to visit you; you shouldn’t go there to visit him.
@@ -85,7 +85,7 @@ next: DA_23.html
 25\. Śroṇatāṇḍya then told the priests, “So it is, so it is! As you’ve said, I’m endowed with these virtues; there are none I don’t possess. Now, listen to what I say: These virtues are possessed by the ascetic Gautama, so we should go there to him; he shouldn’t come here to us. The ascetic Gautama is descended from fathers and mothers who were genuine for seven generations, so he’s not slighted by other people. He has achieved such status, so we should go there to him; he shouldn’t come here to us.
 {:#p25}
 
-26\. “Moreover, the ascetic Gautama is handsome looking, having come from the warrior caste. He has achieved such status, so we should go there to him; he shouldn’t come here to us.
+26\. “Moreover, the ascetic Gautama is handsome-looking, having come from the warrior caste. He has achieved such status, so we should go there to him; he shouldn’t come here to us.
 {:#p26}
 
 27\. “Moreover, the ascetic Gautama was born to a noble station and left home for the path. He has achieved such status, so we should go there to him; he shouldn’t come here to us.
@@ -184,19 +184,19 @@ next: DA_23.html
 58\. Śroṇatāṇḍya then silently thought to himself, “Amazing! Extraordinary! The ascetic Gautama has that great miraculous power to read people’s minds. He asked about the topic that I had thought about!”
 {:#p58}
 
-59\. The priest Śroṇatāṇḍya sat up straight, surveyed the audience around them, and smiled happily. He then answered the Buddha, “I’ve accomplished five qualities of a priest, speaking honestly and not falsely. What are the five? One is that I’m a priest who is descended from seven generations of fathers and mothers who are genuine so that other people don’t slight me. Two is that I’ve mastered and chant the three Vedas, discern all the various scriptures, and I’m learned about all the subtleties of the world’s scriptures. I’m also skilled at [recognizing] the great man’s signs, divining fortune and misfortune, and [performing] sacrifices and rituals. Three is that I’m handsome looking. Four is that I’ve perfected the observance of precepts. Five is that I’m wise and insightful. These are the five. Gautama, I’ve accomplished these five qualities of a priest, speaking truthfully and not falsely.”
+59\. The priest Śroṇatāṇḍya sat up straight, surveyed the audience around them, and smiled happily. He then answered the Buddha, “I’ve accomplished five qualities of a priest, speaking honestly and not falsely. What are the five? One is that I’m a priest who is descended from seven generations of fathers and mothers who are genuine so that other people don’t slight me. Two is that I’ve mastered and chant the three Vedas, discern all the various scriptures, and I’m learned about all the subtleties of the world’s scriptures. I’m also skilled at [recognizing] the great man’s signs, divining fortune and misfortune, and [performing] sacrifices and rituals. Three is that I’m handsome-looking. Four is that I’ve perfected the observance of precepts. Five is that I’m wise and insightful. These are the five. Gautama, I’ve accomplished these five qualities of a priest, speaking truthfully and not falsely.”
 {:#p59}
 
 60\. The Buddha said, “Good, Śroṇatāṇḍya! Could it be that a priest who discards one of those five qualities and achieves four of them could also be called a priest, speaking truthfully and not falsely?”
 {:#p60}
 
-61\. Śroṇatāṇḍya said to the Buddha, “He could. Why is that? Gautama, what purpose does his birth serve? Suppose a priest masters and chants the three Vedas, discerns all the various scriptures, and he’s learned about all the subtleties of the world’s scriptures. He’s also skilled at [recognizing] the great man’s signs, divining fortune and misfortune, and [performing] sacrifices and rituals. He’s handsome looking. He perfects the observance of precepts, and he’s wise and insightful. Having these four qualities, he could be called a priest, speaking truthfully and not falsely.”
+61\. Śroṇatāṇḍya said to the Buddha, “He could. Why is that? Gautama, what purpose does his birth serve? Suppose a priest masters and chants the three Vedas, discerns all the various scriptures, and he’s learned about all the subtleties of the world’s scriptures. He’s also skilled at [recognizing] the great man’s signs, divining fortune and misfortune, and [performing] sacrifices and rituals. He’s handsome-looking. He perfects the observance of precepts, and he’s wise and insightful. Having these four qualities, he could be called a priest, speaking truthfully and not falsely.”
 {:#p61}
 
 62\. The Buddha told Śroṇatāṇḍya, “Good, good! If he were to lack one of those four qualities and achieve three of them, would he still be called a priest, speak truthfully and not falsely?”
 {:#p62}
 
-63\. Śroṇatāṇḍya replied, “He would. Why is that? What purpose does his birth and the Vedas serve? Suppose a priest is handsome looking, has perfected the observance of precepts, and is wise and insightful. Achieving these three qualities, he could be called a priest, speaking truthfully and not falsely.”
+63\. Śroṇatāṇḍya replied, “He would. Why is that? What purpose does his birth and the Vedas serve? Suppose a priest is handsome-looking, has perfected the observance of precepts, and is wise and insightful. Achieving these three qualities, he could be called a priest, speaking truthfully and not falsely.”
 {:#p63}
 
 64\. The Buddha said, “Good, good! How is it? If he were to lack one of those three qualities and achieve two of them, would he be called a priest, speaking truthfully and not falsely?”
