--- a/01_agama/dirgha/DA_30-7.md
+++ b/01_agama/dirgha/DA_30-7.md
@@ -12,7 +12,7 @@ next: DA_30-8.html
 ### Chapter 7: The Four God Kings
 #### Geography
 
-1\. The Buddha addressed the monks,[\[1\]](#n1){:#ref1} “A thousand yojanas to the east of Sumeru the mountain king is the God King Dhṛtarāṣṭra’s city named \*Bhadrottamā, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “A thousand yojanas to the east of Sumeru the mountain king is the God King Dhṛtarāṣṭra’s city named \*Bhadrottamā, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
 {:#p1}
 
 2\. “A thousand yojanas to the south of Mount Sumeru is the God King Virūḍhaka’s city named Sudarśana, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
