--- a/01_agama/dirgha/DA_30-8.md
+++ b/01_agama/dirgha/DA_30-8.md
@@ -224,7 +224,7 @@ next: DA_30-9.html
 
 #### The Process of Becoming a God
 
-67\. “Suppose a sentient being commits bad physical deeds, speaks bad words, and thinks bad thoughts. Their final consciousness ceases here when their body breaks up and their life ends, and then an initial consciousness arises in Hell. Because of that consciousness, they have name and form. Because of that name and form, they have the six senses.
+67\. “Suppose a sentient being commits bad physical deeds, speaks bad words, and thinks bad thoughts. Their final consciousness ceases here when their body breaks up and their life ends, and then an initial consciousness arises in hell. Because of that consciousness, they have name and form. Because of that name and form, they have the six senses.
 {:#p67}
 
 68\. “Sometimes, a sentient being commits bad physical deeds, speaks bad words, and thinks bad thoughts. When their body breaks up and their life ends, they are born among animals. Their final consciousness ceases here, and then an initial consciousness arises in an animal. Because of that consciousness, they have name and form. Because of that name and form, they have the six senses.
