--- a/01_agama/ekottarika/08/EA_08_09.md
+++ b/01_agama/ekottarika/08/EA_08_09.md
@@ -19,7 +19,7 @@ next: EA_08_10.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.561c17'>爾時世尊告諸比丘： 「若有一人出現於世，爾時天及人民皆悉熾盛，三惡眾生便自減少。 猶如國界聖王治化時。 彼城中人民熾盛，隣國力弱。 此亦如是。 若多薩阿竭出現世時⋯三惡趣道便自減少。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one person appears in the world, gods and humans all flourish during that time, and the sentient beings in the three bad destinies dwindle in number. It’s just as when a noble [wheel-turning] king rules the world. The people in his capitol flourish, and neighboring countries weaken. This is likewise. When the Tathāgata, Arhat, and Correctly and Perfectly Awakened One appears in the world, [gods and humans all flourish, and] the sentient beings in the three evil destinies dwindle in number.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one person appears in the world, gods and humans all flourish during that time, and the sentient beings in the three bad destinies dwindle in number. It’s just as when a noble [wheel-turning] king rules the world. The people in his capital flourish, and neighboring countries weaken. This is likewise. When the Tathāgata, Arhat, and Correctly and Perfectly Awakened One appears in the world, [gods and humans all flourish, and] the sentient beings in the three evil destinies dwindle in number.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.561c21'>「如是，諸比丘，當信向佛。 是故，諸比丘，當作是學。」</td>
