--- a/01_agama/ekottarika/09/EA_09_06.md
+++ b/01_agama/ekottarika/09/EA_09_06.md
@@ -19,7 +19,7 @@ next: EA_09_07.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.563a2'>爾時，世尊告諸比丘： 「我恒觀見一人心中所念之事。 如屈伸臂頃而生天上。 所以然者？ 由善心故。 已生善心，便生天上。」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When I continuously examine the things that a person thinks about in their mind, I see: ‘This person will be born up in Heaven in the time it takes to flex their arm.’ Why is that? It’s because of their good mind. Having given rise to a good mind, they’ll be born up in Heaven.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When I continuously examine the things that a person thinks about in their mind, I see: ‘This person will be born up in heaven in the time it takes to flex their arm.’ Why is that? It’s because of their good mind. Having given rise to a good mind, they’ll be born up in heaven.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.563a4'>爾時，世尊便説偈言：</td>
@@ -49,7 +49,7 @@ next: EA_09_07.html
   <td><ul class='verse'>
     <li>Supposing their life were to end<br/>
     Right at this moment in time,<br/>
-    They would be born up in Heaven<br/>
+    They would be born up in heaven<br/>
     Because of their mind’s good conduct.</li>
   </ul></td>
 </tr>
