--- a/01_agama/ekottarika/10/EA_10_03.md
+++ b/01_agama/ekottarika/10/EA_10_03.md
@@ -35,7 +35,7 @@ next: EA_10_04.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.564a24'>世尊告曰： 「檀越、施主當恭敬如子孝順父母，養之侍之。 長益五陰，於閻浮利地現種種義。 觀檀越主能成人戒、聞、三昧、智慧。 諸比丘，多所饒益，於三寶中無所罣礙，能施卿等衣被、飮食、床榻、臥具、病痩醫藥。</td>
-    <td id='p4'>4. The Bhagavān told them, “A donor or almsgiver should be respectful like a devoted son who supports and helps his parents. Increasing the five aggregates, he manifests various aims in this land of Jambudvīpa.<sup id="ref3"><a href="#n3">3</a></sup> Examine a donor’s ability to achieve human precepts, learning, samādhi, and wisdom. Monks, many are the benefits of the Three Jewels when they have no obstructions for those who can give you clothing, meals, furnishings, lodging, and medicine for illnesses.</td>
+    <td id='p4'>4. The Bhagavān told them, “A donor or almsgiver should be respectful like a devoted son who supports and helps his parents. Increasing the five aggregates, he manifests various aims in this land of Jambudvīpa.<sup id="ref3"><a href="#n3">3</a></sup> Examine a donor’s ability to achieve human precepts, learning, <em>samādhi</em>, and wisdom. Monks, many are the benefits of the three jewels when they have no obstructions for those who can give you clothing, meals, furnishings, lodging, and medicine for illnesses.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.564a29'>「是故，諸比丘，當有慈心於檀越所。 小恩常不忘，況復大者。 恒以慈心向彼檀越，説身、口、意清淨之行，不可稱量亦無有限。 身行慈、口行慈、意行慈使彼檀越所施之物終不唐捐。 獲其大果，成大福祐，有大名稱流聞世間、甘露法味。 如是，諸比丘，當作是學。」</td>
