--- a/01_agama/ekottarika/10/EA_10_06.md
+++ b/01_agama/ekottarika/10/EA_10_06.md
@@ -64,7 +64,7 @@ next: EA_10_07.html
     <li>What they give in the present is good!<br/>
     Their hearts head for a broad field of merit.<br/>
     They depart from among humans,<br/>
-    Sure to be born up in Heaven.</li>
+    Sure to be born up in heaven.</li>
   </ul></td>
 </tr>
 <tr>
