--- a/01_agama/ekottarika/12/EA_12_10.md
+++ b/01_agama/ekottarika/12/EA_12_10.md
@@ -19,7 +19,7 @@ next: ../13/EA_13_01.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.571a6'>爾時，世尊告諸比丘： 「受人利養甚為不易，令人不得至無為之處。 所以然者？ 若彼師利羅比丘不貪利養者，不作爾許無量殺生。 身壞、命終，生地獄中。」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Someone taking profit is a serious thing, not an easy thing,<sup id="ref2"><a href="#n2">2</a></sup> for it prevents a person from reaching the unconditioned abode. Why is that? If that monk Śrīla<sup id="ref3"><a href="#n3">3</a></sup> hadn’t craved profit, it wouldn’t have occurred to him to kill measureless beings. He was born in Hell after his body broke up and his life ended.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Someone taking profit is a serious thing, not an easy thing,<sup id="ref2"><a href="#n2">2</a></sup> for it prevents a person from reaching the unconditioned abode. Why is that? If that monk Śrīla<sup id="ref3"><a href="#n3">3</a></sup> hadn’t craved profit, it wouldn’t have occurred to him to kill measureless beings. He was born in hell after his body broke up and his life ended.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.571a9'>爾時，世尊便説此偈：</td>
