--- a/01_agama/ekottarika/13/EA_13_01.md
+++ b/01_agama/ekottarika/13/EA_13_01.md
@@ -23,7 +23,7 @@ next: ../13/EA_13_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.571b5'>「是時，修羅陀比丘常受蒲呼國王供養，以百味之食日來給與。 爾時，彼比丘意染此食，漸捨阿練若行、到時乞食、一處一坐、正中食、樹下露坐、閑居之處、著五納衣、或持三衣、或樂塚間、懃身苦體。 盡捨此已，去三法衣，還為白衣。 屠牛，殺生不可稱計。 身壞、命終，生地獄中。</td>
-    <td id='p3'>3. “But then, the monk Surādha always accepted gifts when the King summoned him, who provided meals of a hundred flavors on the days that he came. That monk’s mind became attached to these meals, and he eventually abandoned the forest-dwelling life, soliciting alms when the time arrived, dwelling in one place for one sitting, eating at midday, sitting under a tree or on open ground, living in a secluded place, wearing the five-piece robe, sometimes keeping three garments, sometimes enjoying being in a charnel ground, and applying oneself to these hardships. Once he had abandoned these things completely, he left behind the three Dharma garments and returned to wearing white clothes. He became a butcher of cattle, killing an inestimable number of beings. He was born in Hell when his body broke up and his life ended.</td>
+    <td id='p3'>3. “But then, the monk Surādha always accepted gifts when the King summoned him, who provided meals of a hundred flavors on the days that he came. That monk’s mind became attached to these meals, and he eventually abandoned the forest-dwelling life, soliciting alms when the time arrived, dwelling in one place for one sitting, eating at midday, sitting under a tree or on open ground, living in a secluded place, wearing the five-piece robe, sometimes keeping three garments, sometimes enjoying being in a charnel ground, and applying oneself to these hardships. Once he had abandoned these things completely, he left behind the three Dharma garments and returned to wearing white clothes. He became a butcher of cattle, killing an inestimable number of beings. He was born in hell when his body broke up and his life ended.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.571b12'>「諸比丘，以此方便知利養甚重，令人不得至無上、正真之道。 若未生利養，制令不生。 已生，求方便使滅。 如是，諸比丘，當作是學。」</td>
