--- a/01_agama/ekottarika/14/EA_14_02.md
+++ b/01_agama/ekottarika/14/EA_14_02.md
@@ -19,7 +19,7 @@ next: EA_14_03.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.576a24'>爾時，世尊告諸比丘： 「於此眾中，我不見一法修行已、多修行已，受人中福，受天上福，得泥洹證。 所謂不殺生也。」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not killing beings.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not killing beings.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576a26'>佛告諸比丘： 「若有人不行殺生亦不念殺，受命極長。 所以然者？ 以彼不嬈亂故。</td>
