--- a/01_agama/ekottarika/14/EA_14_04.md
+++ b/01_agama/ekottarika/14/EA_14_04.md
@@ -19,11 +19,11 @@ next: EA_14_05.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.576b13'>爾時，世尊告諸比丘： 「於此眾中，我不見一法修行已、多修行已，受人中福，受天上福，得泥洹證。 所謂廣施也。」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s generosity.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s generosity.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576b15'>佛告諸比丘： 「若有人廣行布施，於現世中，得色，得力，眾得具足。 天上人中食福，無量⋯</td>
-    <td id='p3'>3. The Buddha told the monks, “If a person widely practices generosity, they’ll attain the forms and powers that are perfected by many virtues.<sup id="ref2"><a href="#n2">2</a></sup> They’ll enjoy the food and merits that are up in Heaven and among humans, which are measureless …</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person widely practices generosity, they’ll attain the forms and powers that are perfected by many virtues.<sup id="ref2"><a href="#n2">2</a></sup> They’ll enjoy the food and merits that are up in heaven and among humans, which are measureless …</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576b17'>「是故，諸比丘，當行布施勿有慳心。 如是，諸比丘，當作是學。」</td>
