--- a/01_agama/ekottarika/14/EA_14_06.md
+++ b/01_agama/ekottarika/14/EA_14_06.md
@@ -19,11 +19,11 @@ next: EA_14_07.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.576c2'>爾時，佛告諸比丘： 「於此眾中，我不見一法修行已、多修行已，受人中福，受天上福，得泥洹證。 所謂不他婬，身體香潔，亦無邪想。」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not engaging in wrong sex.”<sup id="ref2"><a href="#n2">2</a></sup></td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not engaging in wrong sex.”<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576c5'>佛告諸比丘： 「若有人貞潔、不婬，便受天上、人中之福。</td>
-    <td id='p3'>3. The Buddha told the monks, “If a person is chaste and not lustful, keeps themselves fragrant, and doesn’t have wrong notions, then they’ll receive the merits that are up in Heaven or among humans …</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person is chaste and not lustful, keeps themselves fragrant, and doesn’t have wrong notions, then they’ll receive the merits that are up in heaven or among humans …</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576c6'>「是故，諸比丘，莫行邪婬以興婬意。 如是，諸比丘，當作是學。」</td>
