--- a/01_agama/ekottarika/14/EA_14_08.md
+++ b/01_agama/ekottarika/14/EA_14_08.md
@@ -19,7 +19,7 @@ next: EA_14_09.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.576c19'>爾時世尊告諸比丘： 「於此眾中，我不見一法修行已、多修行已，受人中福、受天上福、得泥洹證。 云何為一法？ 所謂不妄語也。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not speaking falsely.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often brings the merits that are among humans, the merits up in heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not speaking falsely.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576c22'>「諸比丘，其不妄語者，口氣香芬，名徳遠聞。</td>
