--- a/01_agama/ekottarika/14/EA_14_10.md
+++ b/01_agama/ekottarika/14/EA_14_10.md
@@ -19,7 +19,7 @@ next: ../15/EA_15_01.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.577a5'>爾時，世尊告諸比丘： 「於此眾中，無有一法勝此法者，若修行已、多修行已，受人中福、受天上福、得泥洹證。 云何為一法？ 所謂不飮酒也。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There isn’t anything in this assembly greater than this one thing<sup id="ref2"><a href="#n2">2</a></sup> that when cultivated and cultivated often brings the merits that are among humans, merits up in Heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not drinking alcohol.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There isn’t anything in this assembly greater than this one thing<sup id="ref2"><a href="#n2">2</a></sup> that when cultivated and cultivated often brings the merits that are among humans, merits up in heaven, and attains the realization of <em>nirvāṇa</em>. What is that one thing? It’s not drinking alcohol.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.577a8'>「諸比丘，若有人不飮酒，生便聰明，無有愚惑，博知經籍。 意不錯亂⋯</td>
