--- a/01_agama/ekottarika/24/EA_24_05.md
+++ b/01_agama/ekottarika/24/EA_24_05.md
@@ -208,7 +208,7 @@ Kāśyapa replied, “If you want to stay there, then do as you like.”
 44\. The Bhagavān then went to the cave and prepared a seat for the night. Sitting down cross-legged with upright body and mind, he fixed his attention to what was in front of him. The poisonous serpent saw the Bhagavān sitting there and spat flaming venom at him. The Bhagavān at that moment had entered a concentration of kindness. He emerged from that concentration of kindness and entered a concentration of blazing light. The serpent’s fire and the Buddha’s light met at the same time.
 {:#p44}
 
-45\. Kāśyapa got up that night to look up at the stars, and he saw the light of a large fire in the cave. Seeing that, he told a disciple, “This ascetic Gautama is handsome looking, but now he’s being killed by that serpent. What a pity! I told him earlier that it was there. ‘There’s an evil serpent; you can’t stay the night there.’” Kāśyapa then told his 500 disciples, “Get pitchers of water and high ladders and go douse that fire! Save that ascetic from danger!”
+45\. Kāśyapa got up that night to look up at the stars, and he saw the light of a large fire in the cave. Seeing that, he told a disciple, “This ascetic Gautama is handsome-looking, but now he’s being killed by that serpent. What a pity! I told him earlier that it was there. ‘There’s an evil serpent; you can’t stay the night there.’” Kāśyapa then told his 500 disciples, “Get pitchers of water and high ladders and go douse that fire! Save that ascetic from danger!”
 {:#p45}
 
 46\. Kāśyapa then led his 500 disciples to the cave to put out the fire. Some of them carried water and others brought ladders, but they weren’t able to put out the fire. It was the Bhagavān’s power that did. The Bhagavān then entered the concentration of kindness and slowly made that serpent stop being hateful. The evil serpent’s mind then became fearful. It ran east and west, trying to leave the cave, but it wasn’t able to find the exit. The evil serpent then went up to the Tathāgata and coiled up in his alms bowl.
