--- a/01_agama/madhyama/MA_005.md
+++ b/01_agama/madhyama/MA_005.md
@@ -30,13 +30,13 @@ The monks then answered, “We see it, Bhagavān!”
 5\. The monks then said, “Bhagavān, that large wood pile is engulfed in flames! If we embraced, sat, or lie with it, it would be very painful. Bhagavān, suppose there were a warrior woman or a priest, householder, or worker woman in the prime of life who is clean and perfumed, wearing bright and pure clothing, and whose body is adorned with flowers and jewelry. To embrace, sit, or lie with her would be very pleasant, Bhagavān.”
 {: #p5}
 
-6\. The Bhagavān told them, “I will explain this for you, so you trainees don’t lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather embrace that wood pile engulfed in flames. If you sit or lie down there even though it would cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in Hell after your body breaks up and your life ends.
+6\. The Bhagavān told them, “I will explain this for you, so you trainees don’t lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather embrace that wood pile engulfed in flames. If you sit or lie down there even though it would cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p6}
 
 7\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p7}
 
-8\. “Suppose he were to embrace a warrior woman or a priest, householder, or worker woman in the prime of life who is clean and perfumed, wearing bright and pure clothing, and whose body is adorned with flowers and jewelry, or suppose he were to sit or lie down with her. That foolish man’s long night will be neither good nor purposeful as a result, which brings the result of bad qualities. He’ll be destined to go to a bad place or be born in Hell when his body breaks up and his life ends.
+8\. “Suppose he were to embrace a warrior woman or a priest, householder, or worker woman in the prime of life who is clean and perfumed, wearing bright and pure clothing, and whose body is adorned with flowers and jewelry, or suppose he were to sit or lie down with her. That foolish man’s long night will be neither good nor purposeful as a result, which brings the result of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p8}
 
 9\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
@@ -50,13 +50,13 @@ The monks then answered, “We see it, Bhagavān!”
 11\. The monks then said, “Bhagavān, if a strong man tightly wrapped a cord of hair rope around our calves and twisted it until it cut our skin, and it cuts our flesh after cutting skin, cuts our tendons after cutting flesh, cuts our bones after cutting tendons, cuts our marrow after cutting bones, and stops, that would be very painful. Bhagavān, suppose we were to accept a faithful gift from a warrior, priest, householder, or worker who massages our body, limbs, hands, and feet. That would be very pleasant, Bhagavān.”
 {: #p11}
 
-12\. The Bhagavān told them, “I will explain this for you, so you trainees don’t lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to tightly wrap a cord of hair rope around your calf and twist it until it cuts your skin, cuts your flesh after cutting skin, cuts your tendons after cutting flesh, cuts your bone after cutting tendons, cuts your marrow after cutting bone, and stops. Even though it would cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in Hell after your body breaks up and your life ends.
+12\. The Bhagavān told them, “I will explain this for you, so you trainees don’t lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to tightly wrap a cord of hair rope around your calf and twist it until it cuts your skin, cuts your flesh after cutting skin, cuts your tendons after cutting flesh, cuts your bone after cutting tendons, cuts your marrow after cutting bone, and stops. Even though it would cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p12}
 
 13\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p13}
 
-14\. “Accepting a faithful gift from a warrior, priest, householder, or worker who massages his body, limbs, hands, and feet, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in Hell when his body breaks up and his life ends.
+14\. “Accepting a faithful gift from a warrior, priest, householder, or worker who massages his body, limbs, hands, and feet, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p14}
 
 15\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
@@ -70,13 +70,13 @@ The monks then answered, “We see it, Bhagavān!”
 17\. The monks then said, “Bhagavān, if a strong man used a brightly polished and sharpened sword to chop off our [leg at the] hip, that would be very painful. Bhagavān, suppose we were to accept a faithful gift from a warrior, priest, householder, or worker who venerates, respects, and looks after us. That would be very pleasant, Bhagavān.”
 {: #p17}
 
-18\. The Bhagavān told them, “I will explain this for you, so you trainees will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to use a brightly polished and sharpened sword to chop off your [leg at the] hip. Even though it would cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in Hell after your body breaks up and your life ends.
+18\. The Bhagavān told them, “I will explain this for you, so you trainees will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to use a brightly polished and sharpened sword to chop off your [leg at the] hip. Even though it would cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p18}
 
 19\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p19}
 
-20\. “Accepting a faithful gift from a warrior, priest, householder, or worker who venerates, respects, and looks after him, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in Hell when his body breaks up and his life ends.
+20\. “Accepting a faithful gift from a warrior, priest, householder, or worker who venerates, respects, and looks after him, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p20}
 
 21\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
@@ -90,13 +90,13 @@ The monks then answered, “We see it, Bhagavān!”
 23\. The monks then said, “Bhagavān, if a strong man wrapped a metal sheet that’s glowing and flaming hot around our bodies, that would be very painful. Bhagavān, suppose we were to accept a faithful gift of clothing from a warrior, priest, householder, or worker. That would be very pleasant, Bhagavān.”
 {: #p23}
 
-24\. The Bhagavān told them, “I will explain this for you, so you trainees don’t lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to wrap a metal sheet that’s glowing and flaming hot around your body. Even though it would cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in Hell after your body breaks up and your life ends.
+24\. The Bhagavān told them, “I will explain this for you, so you trainees don’t lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to wrap a metal sheet that’s glowing and flaming hot around your body. Even though it would cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p24}
 
 25\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p25}
 
-26\. “Accepting a faithful gift of clothing from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in Hell when his body breaks up and his life ends.
+26\. “Accepting a faithful gift of clothing from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p26}
 
 27\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
@@ -110,13 +110,13 @@ The monks then answered, “We see it, Bhagavān!”
 29\. The monks then said, “Bhagavān, if a strong man opened our mouths with hot iron forceps and then put in it an iron ball that’s glowing and flaming hot, that hot iron ball would burn our lips. After it burns our lips, it would burn our tongue. After it burns our tongue, it would burn our gums. After it burns our gums, it would burn our throat. After it burns our throat, it would burn our heart. After it burns our heart, it would burn our intestines and stomach. After it burns our intestines and stomach, it would fall through [to the ground]. That would be very painful! Bhagavān, suppose we were to accept a faithful gift of food with measureless flavors from a warrior, priest, householder, or worker. That would be very pleasant, Bhagavān.”
 {: #p29}
 
-30\. The Bhagavān told them, “I will explain this for you, so you trainees don’t lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to open your mouth with hot iron forceps and then put in it an iron ball that’s glowing and flaming hot. That hot iron ball would burn your lips. After burning your lips, it would burn your tongue. After burning your tongue, it would burn your gums. After burning your gums, it would burn your throat. After burning your throat, it would burn your heart. After burning your heart, it would burn your intestines and stomach. After burning your intestines and stomach, it would fall through [to the ground]. Even though it would cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in Hell after your body breaks up and your life ends.
+30\. The Bhagavān told them, “I will explain this for you, so you trainees don’t lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to open your mouth with hot iron forceps and then put in it an iron ball that’s glowing and flaming hot. That hot iron ball would burn your lips. After burning your lips, it would burn your tongue. After burning your tongue, it would burn your gums. After burning your gums, it would burn your throat. After burning your throat, it would burn your heart. After burning your heart, it would burn your intestines and stomach. After burning your intestines and stomach, it would fall through [to the ground]. Even though it would cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p30}
 
 31\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p31}
 
-32\. “Accepting a faithful gift of food with measureless flavors from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in Hell when his body breaks up and his life ends.
+32\. “Accepting a faithful gift of food with measureless flavors from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p32}
 
 33\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
@@ -136,7 +136,7 @@ The monks then answered, “We see it, Bhagavān!”
 37\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p37}
 
-38\. “Accepting a faithful gift of a bed or sofa to lie on from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in Hell when his body breaks up and his life ends.
+38\. “Accepting a faithful gift of a bed or sofa to lie on from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p38}
 
 39\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
@@ -156,7 +156,7 @@ The monks then answered, “We see it, Bhagavān!”
 43\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p43}
 
-44\. “Accepting a faithful gift of a dwelling from a warrior, priest, householder, or worker, which is coated with whitewash, has doors and windows that are secure, and has a fireplace for warmth, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in Hell when his body breaks up and his life ends.
+44\. “Accepting a faithful gift of a dwelling from a warrior, priest, householder, or worker, which is coated with whitewash, has doors and windows that are secure, and has a fireplace for warmth, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p44}
 
 45\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
