--- a/01_agama/madhyama/MA_012.md
+++ b/01_agama/madhyama/MA_012.md
@@ -55,7 +55,7 @@ next: MA_013.html
   </tr>
   <tr>
     <td class="ch" title='t26.1.434b21'>「身生不善、口行不善、意行不善。 無明行，漏、煩熱、憂慼。 彼於後時，不善無明行滅，不更造新業。 棄捨故業，即於現世便得究竟而無煩熱。 常住不變，謂聖慧所見、聖慧所知。</td>
-    <td id='p10'>10. “As his body action was unskillful, his speech was unskillful, and his mental action was unskillful. His ignorant actions were contaminants, afflictions, fevers, and griefs. Some time after that, he ceases his unskillful and ignorant actions and doesn’t do any new deeds. Abandoning his former deeds, he then reaches the final end in the present life and has no affliction or fever. He always lives unchanging, which is to say what is seen and known by a noble sage.</td>
+    <td id='p10'>10. “As his bodily action was unskillful, his speech was unskillful, and his mental action was unskillful. His ignorant actions were contaminants, afflictions, fevers, and griefs. Some time after that, he ceases his unskillful and ignorant actions and doesn’t do any new deeds. Abandoning his former deeds, he then reaches the final end in the present life and has no affliction or fever. He always lives unchanging, which is to say what is seen and known by a noble sage.</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.434b21'>「云何，惒破？ 如是比丘身、口、意護，汝頗見是處，因此生不善漏，令至後世耶？」</td>
@@ -79,15 +79,15 @@ next: MA_013.html
   </tr>
   <tr>
     <td class="ch" title='t26.1.434c14'>「惒破，當知比丘亦復如是，無明已盡，明已生。 彼無明已盡，明已生，生後身覺便知：『生後身覺』。 生後命覺便知：『生後命覺』。 身壞命終。 壽已畢訖，即於現世一切所覺便盡止息。 當知至竟冷。</td>
-    <td id='p14'>14. “Vāṣpa, you should know that a monk who has ended ignorance and produced insight is likewise. Having ended ignorance and produced insight, the feelings of his last body arise, and then he knows, ‘The feelings of this last body are arising.’ The feelings of his last life arise, and then he knows ‘the feelings of this last life are arising.’ His body breaks up and his life ends. Having reached the end of his life span, all the feelings from his present life completely subside. It should be known that he has reached the final cooling.</td>
+    <td id='p14'>14. “Vāṣpa, you should know that a monk who has ended ignorance and produced insight is likewise. Having ended ignorance and produced insight, the feelings of his last body arise, and then he knows, ‘The feelings of this last body are arising.’ The feelings of his last life arise, and then he knows, ‘The feelings of this last life are arising.’ His body breaks up and his life ends. Having reached the end of his life span, all the feelings from his present life completely subside. It should be known that he has reached the final cooling.</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.434c18'>惒破，比丘如是正心解脫，便得六善住處。 云何為六？ 惒破，比丘眼見色，不喜、不憂。 捨求無為，正念、正智。 惒破，比丘如是正心解脫，是謂得第一善住處。 如是，耳⋯鼻⋯舌⋯身⋯意知法，不喜、不憂。 捨求無為，正念、正智。 惒破，比丘如是正心解脫，是謂得第六善住處。 惒破，比丘如是正心解脫，得此六善住處。」</td>
-    <td id='p15'>15. “Vāṣpa, a monk who is a correctly liberated in mind in this way gains six good abiding places. What are the six? Vāṣpa, seeing forms with his eye, a monk isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing.<sup id="ref8"><a href="#n8">8</a></sup> Vāṣpa, this is called the first good abiding place gained by a monk who is correctly liberated in mind in this way. Thus … with his ear … nose … tongue … body … knowing notions with his mind, he isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing. Vāṣpa, this is called the sixth good abiding place gained by a monk who is correctly liberated in mind in this way. Vāṣpa, these are the six good abiding places gained by a monk who is correctly liberated in mind in this way.</td>
+    <td id='p15'>15. “Vāṣpa, a monk who is correctly liberated in mind in this way gains six good abiding places. What are the six? Vāṣpa, seeing forms with his eye, a monk isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing.<sup id="ref8"><a href="#n8">8</a></sup> Vāṣpa, this is called the first good abiding place gained by a monk who is correctly liberated in mind in this way. Thus … with his ear … nose … tongue … body … knowing notions with his mind, he isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing. Vāṣpa, this is called the sixth good abiding place gained by a monk who is correctly liberated in mind in this way. Vāṣpa, these are the six good abiding places gained by a monk who is correctly liberated in mind in this way.”</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.434c25'>惒破白曰： 「如是，瞿曇。 多聞聖弟子如是正心解脫，得六善住處。 云何為六？ 瞿曇，多聞聖弟子眼見色，不喜、不憂。 捨求無為，正念、正智。 瞿曇，多聞聖弟子如是正心解脫，是謂得第一善住處。 如是，耳⋯鼻⋯舌⋯身⋯意知法，不喜、不憂。 捨求無為，正念、正智。 如是，瞿曇。 多聞聖弟子如是正心解脫，是謂得第六善住處。 如是，瞿曇。 多聞聖弟子如是正心解脫，得此六善住處。」</td>
-    <td>“Vāṣpa said, “Yes, Gautama. A well-versed noble disciple who is correctly liberated in mind in this way gains six good abiding places. What are the six? Gautama, seeing forms with his eye, a well-versed noble disciple isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing. Gautama, this is called the first good abiding place gained by a well-versed noble disciple who is correctly liberated in mind in this way. Thus … with his ear … nose … tongue … body … knows notions with his mind, he isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing. So it is, Gautama. This is called the sixth good abiding place gained by a well-versed noble disciple who is correctly liberated in mind in this way. So it is, Gautama. A well-versed noble disciple who is liberated in mind in this way gains these six good abiding places.”</td>
+    <td>“Vāṣpa said, “Yes, Gautama. A well-versed noble disciple who is correctly liberated in mind in this way gains six good abiding places. What are the six? Gautama, seeing forms with his eye, a well-versed noble disciple isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing. Gautama, this is called the first good abiding place gained by a well-versed noble disciple who is correctly liberated in mind in this way. Thus … with his ear … nose … tongue … body … knowing notions with his mind, he isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing. So it is, Gautama. This is called the sixth good abiding place gained by a well-versed noble disciple who is correctly liberated in mind in this way. So it is, Gautama. A well-versed noble disciple who is liberated in mind in this way gains these six good abiding places.”</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.435a4'>於是，惒破白世尊曰： 「瞿曇，我已知。 善逝，我已解。 瞿曇猶明目人，覆者仰之，覆者發之，迷者示道，暗中施明，若有眼者便見於色。 沙門瞿曇亦復如是。 為我無量方便說法現義，隨其諸道。 世尊，我今自歸於佛、法及比丘眾。 唯願，世尊，受我為優婆塞。 從今日始，終身自歸乃至命盡。</td>
@@ -114,14 +114,14 @@ next: MA_013.html
 <ol>
 <li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0434a12" target="_blank">T26.1.434a12-5a23</a>. It’s parallel with <a href="https://suttacentral.net/an4.195" target="_blank">AN 4.195</a>. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>Śākya people.</em> C. <span class="ch">釋羇瘦</span> (EMC. ʃɪɛk-kɪĕ-ṣïəu = Pr. <em>śakeṣu</em>?), P. <em>sakkesu</em>. This is the translit. of a term that means the people of Śākya. The English equivalent would be Śākyans, just as “Americans” means “people of America.”<br/>
-<em>Kapilavastu.</em> C. <span class="ch">迦維羅衛</span> (EMC. kă-yiui-la-ɦɪuɛi = G. <em>Ka’ilava[stu]</em>?), P. <em>kapilavatthu</em>. This was the capitol of the Śākya lands.<br/>
+<em>Kapilavastu.</em> C. <span class="ch">迦維羅衛</span> (EMC. kă-yiui-la-ɦɪuɛi = G. <em>Ka’ilava[stu]</em>?), P. <em>kapilavatthu</em>. This was the capital of the Śākya lands.<br/>
 <em>banyan tree park.</em> C. <span class="ch">尼拘類園</span> (EMC. nei-kɪu-lɪui + “park” = Pr. <em>nigro[dha]</em>? + <em>arama</em>), P. <em>nigrodhārāma</em>, S. <em>nyagrodhārāma</em>. The name of the banyan tree (presumably Pr. <em>nigrodha</em>) was translit. to C. This was a park near Kapilavastu. [<a href="#ref2">back</a>]</li>
-<li id="n3"><em>Jain</em>. C. <span class="ch">尼乾</span> (EMC. nei-kan = Pr. <em>nigan[tha]</em>), G. <em>nigaṭ́ha</em>, P. <em>nigaṇṭha</em>, S. <em>nirgrantha</em>. Nirgranthajñāniputra was the founder of the religion that is today known as Jain. His disciples were known generally as Nirgranthas in Buddhist texts (which lit. means “mendicant” or “unhindered”), which was usu. translit. in C. I’ve used the modern name for clarity. [<a href="#ref3">back</a>]</li>
+<li id="n3"><em>Jain</em>. C. <span class="ch">尼乾</span> (EMC. nei-kan = Pr. <em>nigan[tha]</em>), G. <em>nigaṭ́ha</em>, P. <em>nigaṇṭha</em>, S. <em>nirgrantha</em>. Nirgranthajñāniputra was the founder of the religion that is today known as Jainism. His disciples were known generally as Nirgranthas in Buddhist texts (which lit. means “mendicant” or “unhindered”), which was usu. translit. in C. I’ve used the modern name for clarity. [<a href="#ref3">back</a>]</li>
 <li id="n4"><em>Vāṣpa</em>. C. <span class="ch">惒破</span> (EMC. ɦua-p‘ua = Pr. <em>vapa</em>), G. <em>vapa</em>?, P. <em>vappa</em>, S. <em>vāṣpa</em>. This Jain disciple’s name lit. meant “planting” in Pali. I’ve adopted a S. equiv. The name was also sometimes written <em>bāṣpa</em> in BHS sources according to Edgerton. [<a href="#ref4">back</a>]</li>
-<li id="n5"><em>Suppose a monk creates unskillful physical actions that were contaminants, afflictions, fevers, and griefs.</em>. C. <span class="ch">若有比丘生不善身行，漏、煩、熱、憂慼</span>, P. <em>ye kāyasamārambhapaccayā uppajjanti āsavā vighātapariḷāhā</em>. The P. phrasing is generalized (“whoever” instead of “a monk”), but <em>āsavā vighāta pariḷāhā</em> appears directly parallel with <span class="ch">漏、煩、熱</span>. There is a functional equivalence between <span class="ch">生</span> … <span class="ch">身行</span> and P. <em>kāyasamārambhapaccayā</em>, but <em>samārambha</em> applied to body, speech, and mind is peculiar to AN 4.195. It seems to refer not simply to actions but to ascetic practices designed to extirgate past deeds. <span class="ch">不善身行</span> in this version seems more likely to translate a standard Buddhist expression like S. <em>akuśala kāya karmapatha</em> (or <em>saṃskāra</em>). As the passage continues, this difference in approach is more apparent. [<a href="#ref5">back</a>]</li>
-<li id="n6"><em>final end</em>. C. <span class="ch">究竟</span>. It’s not clear whether this refers to the end of unskillful deeds or rebirth. AN 4.195 is more explicit that the passage is refer to the gradual extirpation of past deeds by forcing their fruition through self-punishment practices. This certainly would align with the beliefs of ascetic traditions like the Jains that believed self-mortification was necessary to escape future reincarnation. In this version, this is not spelled out to the reader, and perhaps it shouldn’t be assumed to be a subtext. The Buddha seems instead to be asserting that someone who reforms himself has done enough in this regard. [<a href="#ref6">back</a>]</li>
+<li id="n5"><em>Suppose a monk creates unskillful physical actions that were contaminants, afflictions, fevers, and griefs.</em>. C. <span class="ch">若有比丘生不善身行，漏、煩、熱、憂慼</span>, P. <em>ye kāyasamārambhapaccayā uppajjanti āsavā vighātapariḷāhā</em>. The P. phrasing is generalized (“whoever” instead of “a monk”), but <em>āsavā vighāta pariḷāhā</em> appears directly parallel with <span class="ch">漏、煩、熱</span>. There is a functional equivalence between <span class="ch">生</span> … <span class="ch">身行</span> and P. <em>kāyasamārambhapaccayā</em>, but <em>samārambha</em> applied to body, speech, and mind is peculiar to AN 4.195. It seems to refer not simply to actions but to ascetic practices designed to extirpate past deeds. <span class="ch">不善身行</span> in this version seems more likely to translate a standard Buddhist expression like S. <em>akuśala kāya karmapatha</em> (or <em>saṃskāra</em>). As the passage continues, this difference in approach is more apparent. [<a href="#ref5">back</a>]</li>
+<li id="n6"><em>final end</em>. C. <span class="ch">究竟</span>. It’s not clear whether this refers to the end of unskillful deeds or rebirth. AN 4.195 is more explicit that the passage is refer to the gradual extirpation of past deeds by forcing their fruition through self-punishment practices. This certainly would align with the beliefs of ascetic traditions like Jainism that believed self-mortification was necessary to escape future reincarnation. In this version, this is not spelled out to the reader, and perhaps it shouldn’t be assumed to be a subtext. The Buddha seems instead to be asserting that someone who reforms himself has done enough in this regard. [<a href="#ref6">back</a>]</li>
 <li id="n7">C. <span class="ch">生後身覺便知：『生後身覺』，生後命覺便知：『生後命覺』</span>, P. <em>So kāyapariyantikaṁ vedanaṁ vediyamāno ‘kāyapariyantikaṁ vedanaṁ vediyāmī’ti pajānāti; jīvitapariyantikaṁ vedanaṁ vediyamāno ‘jīvitapariyantikaṁ vedanaṁ vediyāmī’ti pajānāti.</em> Presumably, <span class="ch">後身覺</span> and <span class="ch">後命覺</span> translate expressions very similar to P. <em>kāyapariyantikaṁ vedanaṁ</em> and <em>jīvitapariyantikaṁ vedanaṁ</em>. I say similar because the lit. meaning of <span class="ch">後身</span> is “a later body,” meaning one in the next life. There’s no sense of ending that we’d expect from a trans. of P. <em>pariyantika</em>. It’s possible the translator was intending <span class="ch">後</span> to be read as <span class="ch">最後</span> “last.” That makes the most sense given that the passage appears to describe <em>nirvāṇa</em> after the monk’s death, interpreted as <span class="ch">竟冷</span> “the final cooling.” I’ve therefore trans. <span class="ch">後</span> as “last” in this passage. “Later” would only make sense if <em>nirvāṇa</em> were considered a kind of afterlife. [<a href="#ref7">back</a>]</li>
-<li id="n8"><em>With correct mindfulness and correct understanding, he abandons pursuits and does nothing.</em> C. <span class="ch">捨求無為，正念正智</span>, P. <em>upekkhako viharati sato sampajāno</em>. The expression <span class="ch">捨求無為</span> only occurs in this <em>sūtra</em> and corresponds to P. <em>upekkhaka</em>, which means beings “disinterested or uninvolved” and is often rendered into English as “equanimity.” It’s possible the C. translation is an awkward attempt to translate the concept of disinterest (“abandoning pursuits and doing nothing”), but Sarvāstivāda texts habitually added synonyms to clarify passages.<br/>
+<li id="n8"><em>With correct mindfulness and correct understanding, he abandons pursuits and does nothing.</em> C. <span class="ch">捨求無為，正念正智</span>, P. <em>upekkhako viharati sato sampajāno</em>. The expression <span class="ch">捨求無為</span> only occurs in this <em>sūtra</em> and corresponds to P. <em>upekkhaka</em>, which means being “disinterested or uninvolved” and is often rendered into English as “equanimity.” It’s possible the C. translation is an awkward attempt to translate the concept of disinterest (“abandoning pursuits and doing nothing”), but Sarvāstivāda texts habitually added synonyms to clarify passages.<br/>
 The expression <span class="ch">正念正智</span> (correct mindfulness and correct understanding) occurs often in MĀ and corresponds to P. <em>sati sampajāna</em>. The G. equiv. of <em>sampajāna</em> is attested as <em>saṃprajana</em>. There were clear cases of G. <em>saṃ</em> (complete), <em>sama</em> (equal), and <em>saṃma</em> (correct) being conflated because <em>saṃma</em> was often contracted in practice. However, I find it difficult to consider this reading mistaken when even Xuanzang translates the S. expression as <span class="ch">正念正知</span>. I’ve therefore preserved the translator’s interpretation here, but I read <span class="ch">智</span> as meaning <span class="ch">知</span>. [<a href="#ref8">back</a>]</li>
 <li id="n9">This paragraph and the next are parallel with a standard conclusion found in Pali <em>sutta</em>s in which an interlocutor praises the Buddha for having revealed the truth to them: “<em>Abhikkantaṁ, bho gotama, abhikkantaṁ, bho gotama. Seyyathāpi, bho gotama, nikkujjitaṁ vā ukkujjeyya, paṭicchannaṁ vā vivareyya, mūḷhassa vā maggaṁ ācikkheyya, andhakāre vā telapajjotaṁ dhāreyya: ‘cakkhumanto rūpāni dakkhantī’ti; evamevaṁ bhotā gotamena anekapariyāyena dhammo pakāsito. Esāhaṁ bhavantaṁ gotamaṁ saraṇaṁ gacchāmi dhammañca bhikkhusaṅghañca. Upāsakaṁ maṁ bhavaṁ gotamo dhāretu ajjatagge pāṇupetaṁ saraṇaṁ gatan”ti.</em>”<br/>
 In AN 4.195, this finale has been abbreviated away at the end after the simile of the horse trader, which occurs next in this version. However, this version departs from the Pali by depicting Vāṣpa as taking refuge three times rather than once. [<a href="#ref9">back</a>]</li>
