--- a/01_agama/madhyama/MA_017.md
+++ b/01_agama/madhyama/MA_017.md
@@ -45,15 +45,15 @@ Gāminī answered, “No, Bhagavān.”
 
 ### A Person Who Practices a Light Path
 
-9\. “Gāminī, what do you think? Suppose there’s a man or woman in that town who makes effort, diligently cultivates, and practices the superb teaching. They consummate the path of ten good deeds, which are parting with killing and stopping killing … taking what’s not given … sexual misconduct … false speech … parting with wrong view, stopping wrong view, and attaining right view. When their life ends, suppose a crowd of people comes. They each praise them and pray with their palms together, ‘You man or woman made effort, diligently cultivated, and practiced the superb teaching. You consummated the path of ten good deeds, which are parting with killing and stopping killing … taking what’s not given … sexual misconduct … false speech … parting with wrong view, stopping wrong view, and attaining right view. Because of these causes and these conditions, you will go at a bad place, being born in Hell when your body breaks up and your life ends.’
+9\. “Gāminī, what do you think? Suppose there’s a man or woman in that town who makes effort, diligently cultivates, and practices the superb teaching. They consummate the path of ten good deeds, which are parting with killing and stopping killing … taking what’s not given … sexual misconduct … false speech … parting with wrong view, stopping wrong view, and attaining right view. When their life ends, suppose a crowd of people comes. They each praise them and pray with their palms together, ‘You man or woman made effort, diligently cultivated, and practiced the superb teaching. You consummated the path of ten good deeds, which are parting with killing and stopping killing … taking what’s not given … sexual misconduct … false speech … parting with wrong view, stopping wrong view, and attaining right view. Because of these causes and these conditions, you will go at a bad place, being born in hell when your body breaks up and your life ends.’
 {: #p9}
 
-10\. “Gāminī, what do you think? That man or woman made effort, diligently cultivated, and practiced the superb teaching. They consummated the path of ten good deeds, which are parting with killing and stopping killing … taking what’s not given … sexual misconduct … false speech … parting with wrong view, stopping wrong view, and attaining right view. Would they go to a bad place, being born in Hell when their body breaks up and their life ends because of these causes and these conditions when this crowd of people praises them and prays with their palms together?”
+10\. “Gāminī, what do you think? That man or woman made effort, diligently cultivated, and practiced the superb teaching. They consummated the path of ten good deeds, which are parting with killing and stopping killing … taking what’s not given … sexual misconduct … false speech … parting with wrong view, stopping wrong view, and attaining right view. Would they go to a bad place, being born in hell when their body breaks up and their life ends because of these causes and these conditions when this crowd of people praises them and prays with their palms together?”
 {: #p10}
 
 Gāminī answered, “No, Bhagavān.”
 
-11\. The Bhagavān commended him, “Good, Gāminī! Why is that? Gāminī, that man or woman made effort, diligently cultivated, and practiced the superb teaching. They consummated the path of ten good deeds, which are parting with killing and stopping killing … taking what’s not given … sexual misconduct … false speech … parting with wrong view, stopping wrong view, and attaining right view. Suppose [a crowd of people comes,] and they each praise them and pray with their palms together, ‘Because of these causes and these conditions, you can go to a bad place, being born in Hell when your body breaks and your life ends.’ This is not something that’s possible. Why is that? Gāminī, the path of the ten good deeds is light and has a light result. It naturally rises upward; it surely goes to a good place.
+11\. The Bhagavān commended him, “Good, Gāminī! Why is that? Gāminī, that man or woman made effort, diligently cultivated, and practiced the superb teaching. They consummated the path of ten good deeds, which are parting with killing and stopping killing … taking what’s not given … sexual misconduct … false speech … parting with wrong view, stopping wrong view, and attaining right view. Suppose [a crowd of people comes,] and they each praise them and pray with their palms together, ‘Because of these causes and these conditions, you can go to a bad place, being born in hell when your body breaks and your life ends.’ This is not something that’s possible. Why is that? Gāminī, the path of the ten good deeds is light and has a light result. It naturally rises upward; it surely goes to a good place.
 {: #p11}
 
 #### The Simile of a Pot of Cream in Water
