--- a/01_agama/madhyama/MA_025.md
+++ b/01_agama/madhyama/MA_025.md
@@ -55,7 +55,7 @@ next: MA_029.html
   </tr>
   <tr>
     <td class="ch" title='t26.1.454b25'>「如是，諸賢，或有一人身不淨行⋯口⋯意不淨行。 若慧者見，便作是念： 『此賢身不淨行⋯口⋯意不淨行。 莫令此賢因身不淨行⋯口⋯意不淨行，身壞命終，趣至惡處，生地獄中。 若此賢得善知識者，捨身不淨行，修身淨行，捨口⋯意不淨行，修口⋯意淨行。 如是，此賢因身淨行⋯口⋯意淨行，身壞命終，必至善處，乃生天上。』 謂彼賢為此賢極有哀愍、慈念之心。 若慧者見，設生恚惱，應如是除。</td>
-    <td id='p11'>11. “In this way, Venerables, there might be someone whose physical, verbal, and mental conduct is impure. If a wise person sees this, they should think, ‘This Venerable’s physical, verbal, and mental conduct are impure. Don’t let this Venerable end up in a bad destiny or be born in Hell when their body breaks up and their life ends because their physical, verbal, and mental conduct is impure. If this Venerable could meet a good friend, they would abandon their impure physical conduct and cultivate pure physical conduct … abandon their impure verbal … mental conduct and cultivate pure verbal … mental conduct. In this way, this Venerable would surely end up in a good destination or even be born up in Heaven when their body breaks and their life ends because their physical, verbal, and mental conduct would be pure.’ This is the utmost thought of compassion and caring this Venerable has for that other Venerable. If a wise person is angered by what they see, they should eliminate that anger in this way.</td>
+    <td id='p11'>11. “In this way, Venerables, there might be someone whose physical, verbal, and mental conduct is impure. If a wise person sees this, they should think, ‘This Venerable’s physical, verbal, and mental conduct are impure. Don’t let this Venerable end up in a bad destiny or be born in hell when their body breaks up and their life ends because their physical, verbal, and mental conduct is impure. If this Venerable could meet a good friend, they would abandon their impure physical conduct and cultivate pure physical conduct … abandon their impure verbal … mental conduct and cultivate pure verbal … mental conduct. In this way, this Venerable would surely end up in a good destination or even be born up in heaven when their body breaks and their life ends because their physical, verbal, and mental conduct would be pure.’ This is the utmost thought of compassion and caring this Venerable has for that other Venerable. If a wise person is angered by what they see, they should eliminate that anger in this way.</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.454c5'>「諸賢，或有一人身淨行⋯口⋯意淨行。 若慧者見，設生恚惱，當云何除？ 諸賢，猶村外不遠，有好池水，既清且美。 其淵、平、滿，翠草被岸，華樹四周。 若有人來，熱、極煩悶、飢、渴、頓乏、風熱所逼。 彼至池已，脫衣置岸，便入池中。 恣意快浴，除熱、煩悶、飢、渴、頓乏。</td>
