--- a/01_agama/madhyama/MA_029.md
+++ b/01_agama/madhyama/MA_029.md
@@ -35,7 +35,7 @@ next: MA_031.html
   </tr>
   <tr>
     <td class="ch" title='t26.1.461c3'>答曰： 「有也。 尊者舍梨子，謂有比丘知不善、知不善根。 云何知不善？ 謂身惡行不善，口、意惡行不善。 是謂知不善。</td>
-    <td id='p5'>5. Mahākauṣṭhila replied, “There is. Venerable Śāriputra, there’s a monk who knows what’s unskillful and knows the roots of unskillfulness. How does he know what’s unskillful? It mean bad physical action is unskillful and bad verbal and mental actions are unskillful. This is called knowing what’s unskillful.</td>
+    <td id='p5'>5. Mahākauṣṭhila replied, “There is. Venerable Śāriputra, there’s a monk who knows what’s unskillful and knows the roots of unskillfulness. How does he know what’s unskillful? It means bad physical action is unskillful and bad verbal and mental actions are unskillful. This is called knowing what’s unskillful.</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.461c5'>「云何知不善根？ 謂貪不善根，恚、癡不善根。 是謂知不善根。 尊者舍梨子，若有比丘如是知不善及不善根者，是謂比丘成就見，得正見，於法得不壞淨，入正法中。」</td>
