--- a/01_agama/madhyama/MA_077.md
+++ b/01_agama/madhyama/MA_077.md
@@ -129,7 +129,7 @@ Aniruddha and the others accepted the teaching and listened.
 
 “Having heard those people, he remembers: ‘That venerable was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, he might be inspired to emulate that Venerable So-and-So. Aniruddha, such a monk surely will attain a distinct abode of well-being.
 
-28\. “Furthermore, Aniruddha, a monk hears this: ‘A certain venerable’s life has ended at some location, and the Buddha has related that he had ended the three bonds, and lust, hate, and delusion were weakened. He will be reborn once up in Heaven or among humans, and he’ll reach the limit of suffering after that one rebirth.’ He may have met that venerable personally, or he might have heard from numerous people: ‘That venerable is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
+28\. “Furthermore, Aniruddha, a monk hears this: ‘A certain venerable’s life has ended at some location, and the Buddha has related that he had ended the three bonds, and lust, hate, and delusion were weakened. He will be reborn once up in heaven or among humans, and he’ll reach the limit of suffering after that one rebirth.’ He may have met that venerable personally, or he might have heard from numerous people: ‘That venerable is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
 {: #p28}
 
 “Having heard those people, he remembers: ‘That venerable was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, he might be inspired to emulate that Venerable So-and-So. Aniruddha, such a monk surely will attain a distinct abode of well-being.  
@@ -151,12 +151,12 @@ Aniruddha and the others accepted the teaching and listened.
 
 “Having heard those people, she remembers: ‘That nun was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, she might be inspired to emulate that nun So-and-So. Aniruddha, such a nun surely will attain a distinct abode of well-being.
 
-32\. “Furthermore, Aniruddha, a nun hears this: ‘A certain nun’s life has ended at some location, and the Buddha has related that she had ended the three bonds, and lust, hate, and delusion were weakened. She was once reborn up in Heaven or among humans, and she’ll reach the limit of suffering after that one rebirth.’ She may have met that nun personally, or she might have heard from numerous people: ‘That nun is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
+32\. “Furthermore, Aniruddha, a nun hears this: ‘A certain nun’s life has ended at some location, and the Buddha has related that she had ended the three bonds, and lust, hate, and delusion were weakened. She was once reborn up in heaven or among humans, and she’ll reach the limit of suffering after that one rebirth.’ She may have met that nun personally, or she might have heard from numerous people: ‘That nun is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
 {: #p32}
 
 “Having heard those people, she remembers: ‘That nun was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, she might be inspired to emulate that nun So-and-So. Aniruddha, such a nun surely will attain a distinct abode of well-being.
 
-33\. “Furthermore, Aniruddha, a nun hears this: ‘A certain nun’s life has ended at some location, and the Buddha has related that she had ended the three bonds, attained stream entry, and didn’t fall into a bad state. She is certainly destined for right awakening, experiencing at most seven existences. After seven rebirths up in Heaven or among humans, she’ll reach the limit of suffering.’ She may have met that nun personally, or she might have heard from numerous people: ‘That nun is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
+33\. “Furthermore, Aniruddha, a nun hears this: ‘A certain nun’s life has ended at some location, and the Buddha has related that she had ended the three bonds, attained stream entry, and didn’t fall into a bad state. She is certainly destined for right awakening, experiencing at most seven existences. After seven rebirths up in heaven or among humans, she’ll reach the limit of suffering.’ She may have met that nun personally, or she might have heard from numerous people: ‘That nun is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
 {: #p33}
 
 “Having heard those people, she remembers: ‘That nun was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, she might be inspired to emulate that nun So-and-So. Aniruddha, such a nun surely will attain a distinct abode of well-being.
@@ -168,12 +168,12 @@ Aniruddha and the others accepted the teaching and listened.
 
 “Having heard those people, he remembers: ‘That layman was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, he might be inspired to emulate that layman So-and-So. Aniruddha, such a layman surely will attain a distinct abode of well-being.
 
-35\. “Furthermore, Aniruddha, a layman hears this: ‘A certain layman’s life has ended at some location, and the Buddha has related that he had ended the three bonds, and lust, hate, and delusion were weakened. He attained one rebirth up in Heaven or among humans, and he will reach the limit of suffering after that one rebirth.’ He may have met that layman personally, or he might have heard from numerous people: ‘That layman is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
+35\. “Furthermore, Aniruddha, a layman hears this: ‘A certain layman’s life has ended at some location, and the Buddha has related that he had ended the three bonds, and lust, hate, and delusion were weakened. He attained one rebirth up in heaven or among humans, and he will reach the limit of suffering after that one rebirth.’ He may have met that layman personally, or he might have heard from numerous people: ‘That layman is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
 {: #p35}
 
 “Having heard those people, he remembers: ‘That layman was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, he might be inspired to emulate that layman So-and-So. Aniruddha, such a layman surely will attain a distinct abode of well-being.
 
-36\. “Furthermore, Aniruddha, a layman hears this: ‘A certain layman’s life has ended at some location, and the Buddha has related that he had ended the three bonds, attained stream entry, and didn’t fall into a bad state. He is certainly destined for right awakening, experiencing at most seven existences. After seven rebirths up in Heaven or among humans, he’ll reach the limit of suffering.’ He may have met that layman personally, or he might have heard from numerous people: ‘That layman is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
+36\. “Furthermore, Aniruddha, a layman hears this: ‘A certain layman’s life has ended at some location, and the Buddha has related that he had ended the three bonds, attained stream entry, and didn’t fall into a bad state. He is certainly destined for right awakening, experiencing at most seven existences. After seven rebirths up in heaven or among humans, he’ll reach the limit of suffering.’ He may have met that layman personally, or he might have heard from numerous people: ‘That layman is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
 {: #p36}
 
 “Having heard those people, he remembers: ‘That layman was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, he might be inspired to emulate that layman So-and-So. Aniruddha, such a layman surely will attain a distinct abode of well-being.
@@ -185,12 +185,12 @@ Aniruddha and the others accepted the teaching and listened.
 
 “Having heard those people, she remembers: ‘That laywoman was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, she might be inspired to emulate that laywoman So-and-So. Aniruddha, such a laywoman surely will attain a distinct abode of well-being.
 
-38\. “Furthermore, Aniruddha, a laywoman hears this: ‘A certain laywoman’s life has ended at some location, and the Buddha has related that she had ended the three bonds, and lust, hate, and delusion were weakened. She attained one rebirth up in Heaven or among humans, and she will reach the limit of suffering after that one rebirth.’ She may have met that laywoman personally or heard from numerous people: ‘That laywoman is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
+38\. “Furthermore, Aniruddha, a laywoman hears this: ‘A certain laywoman’s life has ended at some location, and the Buddha has related that she had ended the three bonds, and lust, hate, and delusion were weakened. She attained one rebirth up in heaven or among humans, and she will reach the limit of suffering after that one rebirth.’ She may have met that laywoman personally or heard from numerous people: ‘That laywoman is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
 {: #p38}
 
 “Having heard those people, she remembers: ‘That laywoman was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, she might be inspired to emulate that laywoman So-and-So. Aniruddha, such a laywoman surely will attain a distinct abode of well-being.
 
-39\. “Furthermore, Aniruddha, a laywoman hears this: ‘A certain laywoman’s life has ended at some location, and the Buddha has related that she had ended the three bonds, attained stream entry, and didn’t fall into a bad state. She is certainly destined for right awakening, experiencing at most seven existences. After seven rebirths up in Heaven or among humans, she’ll reach the limit of suffering.’ She may have met that laywoman personally or heard from numerous people: ‘That laywoman is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
+39\. “Furthermore, Aniruddha, a laywoman hears this: ‘A certain laywoman’s life has ended at some location, and the Buddha has related that she had ended the three bonds, attained stream entry, and didn’t fall into a bad state. She is certainly destined for right awakening, experiencing at most seven existences. After seven rebirths up in heaven or among humans, she’ll reach the limit of suffering.’ She may have met that laywoman personally or heard from numerous people: ‘That laywoman is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
 {: #p39}
 
 “Having heard those people, she remembers: ‘That laywoman was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, she might be inspired to emulate that laywoman So-and-So. Aniruddha, such a laywoman surely will attain a distinct abode of well-being.
