--- a/01_agama/madhyama/MA_080.md
+++ b/01_agama/madhyama/MA_080.md
@@ -182,10 +182,10 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 51\. “Good men, with the pure divine eye that goes beyond that of humans, I saw sentient beings here when they were dying and being born. With beautiful and ugly forms, marvelous and not marvelous, they were reborn in good places and places that were not good according to the deeds that those sentient beings had done. I really saw them.
 {: #p51}
 
-52\. “If these sentient beings had done bad physical deeds and bad verbal and mental deeds, had slandered noble people, had wrong views, and accomplished the deeds of wrong views, then those causes and conditions here would surely send them to bad places when their bodies broke up and their lives ended. They were born in Hell.
+52\. “If these sentient beings had done bad physical deeds and bad verbal and mental deeds, had slandered noble people, had wrong views, and accomplished the deeds of wrong views, then those causes and conditions here would surely send them to bad places when their bodies broke up and their lives ended. They were born in hell.
 {: #p52}
 
-53\. “If these sentient beings done marvelous physical deeds and marvelous verbal and mental deeds, didn’t slander noble people, had right views, and accomplished the deeds of right view, then those causes and conditions here would surely lead them to rise to good places when their bodies broke up and their lives ended. They were born up in Heaven.
+53\. “If these sentient beings done marvelous physical deeds and marvelous verbal and mental deeds, didn’t slander noble people, had right views, and accomplished the deeds of right view, then those causes and conditions here would surely lead them to rise to good places when their bodies broke up and their lives ended. They were born up in heaven.
 {: #p53}
 
 54\. “Good men, after I had attained the purity of a concentrated mind in this way, I was without defilement or affliction, flexible, and abiding well. I attained an imperturbable mind and trained to realize the penetrating knowledge of the end of contaminants.
