--- a/01_agama/madhyama/MA_081.md
+++ b/01_agama/madhyama/MA_081.md
@@ -223,7 +223,7 @@ The monks answered, “No, Bhagavān. Why is that? They won’t obtain fire by r
 62\. “Furthermore, once he has ended the three bonds, that monk becomes a stream entrant and doesn’t fall into bad states. He’s certainly destined for right awakening and will experience at most seven existences. After seven rebirths up in heaven or among humans, he’ll reach the limit of suffering. This is the ninth virtue of someone who cultivates mindfulness of body and disseminates it in this way.
 {: #p62}
 
-63\. “Furthermore, once he ends the three bonds, and lust, hate, and delusion are weakened, that monk gets one rebirth up in Heaven or among humans. After one rebirth, he will then reach the limit of suffering. This is the tenth virtue of someone who cultivates mindfulness of body and disseminates it in this way.
+63\. “Furthermore, once he ends the three bonds, and lust, hate, and delusion are weakened, that monk gets one rebirth up in heaven or among humans. After one rebirth, he will then reach the limit of suffering. This is the tenth virtue of someone who cultivates mindfulness of body and disseminates it in this way.
 {: #p63}
 
 64\. “Furthermore, that monk ends the five lower bonds. He’ll be born elsewhere and then [enter] parinirvāṇa. He attains irreversibility and doesn’t return to this world. This is the eleventh virtue of someone who cultivates mindfulness of body and disseminates it in this way.
