--- a/01_agama/madhyama/MA_153.md
+++ b/01_agama/madhyama/MA_153.md
@@ -110,16 +110,16 @@ He answered, “No, Gautama.”
 
 #### The Heavenly Five Merits of Desire
 
-26\. The Bhagavān told him, “Sugandika, take the example of a householder or a householder’s son who’s extremely prosperous, whose wealth is measureless. Many are his grazing pastures, residences, and districts, and his means of living are diverse and abundant. He obtains the five desires easily, not with difficulty. He achieves marvelous physical conduct … verbal conduct … marvelous mental conduct. When he’s about to die, he doesn’t enjoy the five merits of desire and abandons them. When his body breaks up and his life ends, he ascends afterward to a good destination, being born up in Heaven. There, he’s endowed with and roams in the five merits of desire.
+26\. The Bhagavān told him, “Sugandika, take the example of a householder or a householder’s son who’s extremely prosperous, whose wealth is measureless. Many are his grazing pastures, residences, and districts, and his means of living are diverse and abundant. He obtains the five desires easily, not with difficulty. He achieves marvelous physical conduct … verbal conduct … marvelous mental conduct. When he’s about to die, he doesn’t enjoy the five merits of desire and abandons them. When his body breaks up and his life ends, he ascends afterward to a good destination, being born up in heaven. There, he’s endowed with and roams in the five merits of desire.
 {:#p26}
 
 27\. “Sugandika, would this god or son of a god rather abandon the five heavenly merits of desire? Would he rejoice when remembering his enjoyment of human desires?”
 {:#p27}
 
-28\. “He answered, “No, Gautama. Why would that be? Human desires are a foul place that’s impure. It would be detestable, unapproachable, horrible, and very painful to his mind. Gautama, the desires in Heaven are so much higher, more marvelous and superior, than human desires. It would never happen that this god or son of a god would abandon the five merits of desire up in Heaven or rejoice when remembering his enjoyment of human desires.”
+28\. “He answered, “No, Gautama. Why would that be? Human desires are a foul place that’s impure. It would be detestable, unapproachable, horrible, and very painful to his mind. Gautama, the desires in heaven are so much higher, more marvelous and superior, than human desires. It would never happen that this god or son of a god would abandon the five merits of desire up in heaven or rejoice when remembering his enjoyment of human desires.”
 {:#p28}
 
-29\. “So it is, Sugandika. I ended human desires and went beyond the desires in Heaven. I shaved off their hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. Truly seeing the formation, cessation, enjoyment, trouble, and escape of the five merits of desire, I lived with an inner calm.
+29\. “So it is, Sugandika. I ended human desires and went beyond the desires in heaven. I shaved off their hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. Truly seeing the formation, cessation, enjoyment, trouble, and escape of the five merits of desire, I lived with an inner calm.
 {:#p29}
 
 30\. “I saw another person who had yet to part with desire. They were eaten by the craving for desires and burned by a fever for desires. The five merits of desire were lovely, wished for, and associated with what’s desirable. When I saw this person pursuing [desires], I didn’t praise that, nor was I delighted by that.
