--- a/09_other_sutras/T757.md
+++ b/09_other_sutras/T757.md
@@ -229,7 +229,7 @@ next: ../../../03_samyukta/SA_01/SA1_145.html
 69\. “Although he knew and saw such things, that prominent man’s son didn’t believe it, so he has this criticism. Because he continues this criticism with his thoughts, words, and his views, he’ll quickly fall into hell.
 {:#p69}
 
-#### The Parable of Seeing Births in Hell
+#### The Parable of Seeing Births in hell
 
 70\. “Furthermore, Śāriputra, I fully know the existences in the destiny of hell, the causes of hell … the results experienced by sentient beings there. Now, let me briefly illustrate the meaning of this with a parable.
 {:#p70}
