--- a/01_agama/dirgha/DA_23.md
+++ b/01_agama/dirgha/DA_23.md
@@ -62,7 +62,7 @@ next: DA_24.html
 16\. They continued: “Great priest, you’ve mastered the three Vedas, can discern all the various scriptures, and have learned about the subtleties of worldly literature. You’re also skilled in the way of the great man’s signs, divining fortune and misfortune, and ritual sacrifices and etiquette. You have achieved such status, so he should come visit you; you shouldn’t go visit him.
 {:#p16}
 
-17\. “Moreover, great priest, you’re handsome looking, having attained the appearance of Brahmā. You have achieved such status, so he should come visit you; you shouldn’t go visit him.
+17\. “Moreover, great priest, you’re handsome-looking, having attained the appearance of Brahmā. You have achieved such status, so he should come visit you; you shouldn’t go visit him.
 {:#p17}
 
 18\. “Moreover, great priest, your precepts and virtue are surpassing, and your wisdom is accomplished. You have achieved such status, so he should come visit you; you shouldn’t go visit him.
@@ -100,7 +100,7 @@ next: DA_24.html
 28\. “The ascetic Gautama is descended from seven generations of fathers and mothers who were genuine, so he isn’t slighted by others. He has achieved such status, so we should go visit him; he shouldn’t come visit us.
 {:#p28}
 
-29\. “Moreover, the ascetic Gautama is handsome looking, having come from the warrior caste. He has achieved such status, so we should go visit him; he shouldn’t come visit us.
+29\. “Moreover, the ascetic Gautama is handsome-looking, having come from the warrior caste. He has achieved such status, so we should go visit him; he shouldn’t come visit us.
 {:#p29}
 
 30\. “Moreover, the ascetic Gautama was born to a noble house and left home for the path. He has achieved such status, so we should go visit him; he shouldn’t come visit us.
