--- a/01_agama/ekottarika/09/EA_09_10.md
+++ b/01_agama/ekottarika/09/EA_09_10.md
@@ -46,7 +46,7 @@ next: ../10/EA_10_01.html
   </ul></td>
   <td><ul class='verse'>
     <li>[1-2] Two laywomen, [3-4] two on mind,<br/>
-    [5] One on downfall, [6] one on birth in Heaven,<br/>
+    [5] One on downfall, [6] one on birth in heaven,<br/>
     [7-8] Perceptions that delight men and women,<br/>
     [9-10] Two on notions of desire are last.</li>
   </ul></td>
